--- a/website-projexts/website-projexts.csproj
+++ b/website-projexts/website-projexts.csproj
@@ -145,7 +145,11 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\fonts\ionicons.min.css" />
     <Content Include="Content\fonts\ionicons.svg" />
-    <Content Include="Content\img\header-bg.jpg" />
+    <Content Include="Content\img\header.jpg" />
+    <Content Include="Content\img\project1.jpeg" />
+    <Content Include="Content\img\project2.jpeg" />
+    <Content Include="Content\img\project3.jpg" />
+    <Content Include="Content\img\trust.jpeg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
